# AyEDA

./: .gitignore  1dimen.txt  Cell.cc  Lattice.h  Makefile  README.md  Tabla.txt  a.out  abb  abe  cambio.sh  date_main  ejecutable.sh  generacion.txt  input  int_main  limpiar.sh  main  main.cc  makefile  merge.cc  nif_abb  nif_abe  nif_main  nodo  p1  p2  p3  p4  personaje_main  programa  programa2  test  testo.txt  vaciar.sh  var2.txt  variante.txt
1_practica/: Makefile  programa  variante.txt
files/: date.txt  test.txt
include/: Cell.h  CellACE.h  CellLife.h  FactoryCell.h  Lattice.h  Lattice1D.h  Lattice2D.h  Position.h  ab.h  abb.h  abe.h  avl.h  date.h  dispersion.h  exploration.h  hashtable.h  libro.h  main.h  nif.h  nodo.h  personaje.h  sequence.h  sorting.h
pr_4/: CMakeLists.txt
pr_4/src/: dispersion_function_sum.h  exploration_function_double.h  exploration_function_lineal.h  exploration_function_quadratic.h  hash_table.h
practica 1/: Cell.cc  Cell.h  Lattice.cc  Lattice.h  main.cc
practica 2/: Cell.cc  Cell.h  Lattice.cc  Lattice.h  main.cc
second_try/: Makefile
src/: Cell.cc  Cell.h  CellACE.cc  CellLife.cc  FactoryCell.cc  Lattice.cc  Lattice.h  Lattice1D.cc  Lattice2D.cc  Position.cc  block.h  date_main.cc  dispersion.cc  dispersion_function.h  dispersion_function_module.h  dispersion_function_pseudorandom.h  exploration.cc  exploration_function.h  exploration_function_redispersion.h  hash_table_main.cc  int_main.cc  list.h  main.cc  main_long.cc  main_mod.cc  main_nif.cc  nif_main.cc  perso_main.cc  sequence.cc  sequence.h  test_arg.cc  test_functions.cc  test_hash.cc  test_libro.cc  test_main.cc  test_nif.cc  vehicle.h
(+63 files in other folders)
